--- a/.github/workflows/build-jsp.yml
+++ b/.github/workflows/build-jsp.yml
@@ -17,6 +17,9 @@ jobs:
       with:
         repository: unicode-org/cldr
         path: cldr
+    - name: Backup Unicodetools and CLDR for jsps  # this is needed only for the Docker build
+      run:
+        mkdir -p UnicodeJsps/target && tar cfpz UnicodeJsps/target/cldr-unicodetools.tgz ./cldr ./unicodetools
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
