--- a/.github/workflows/build-jsp.yml
+++ b/.github/workflows/build-jsp.yml
@@ -1,5 +1,9 @@
 name: Build JSP
 
+env:
+  CURRENT_UVERSION: 15.1.0
+  PREVIOUS_UVERSION: 15.0.0  # not used at present
+
 on:
   push:
     branches:
@@ -11,15 +15,31 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - name: Get the CLDR_REF from pom.xml
+      id: cldr_ref
+      run: echo "CLDR_REF="$(mvn help:evaluate -Dexpression=cldr.version -q -DforceStdout | cut -d- -f3) >> $GITHUB_OUTPUT && cat ${GITHUB_OUTPUT}
+    - name: Verify CLDR checkout ref
+      run: echo CLDR_REF="${{ steps.cldr_ref.outputs.CLDR_REF }}" && [ "${{ steps.cldr_ref.outputs.CLDR_REF }}x" != "x" ] # fail if empty
+    - name: Cache CLDR repository
+      uses: actions/cache@v3
+      with:
+        path: cldr
+        key: cldr-${{ steps.cldr_ref.outputs.CLDR_REF }}
+        restore-keys: |
+          cldr
     - name: Check out CLDR
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         repository: unicode-org/cldr
         path: cldr
+        ref: main
+        fetch-depth: 0
+    - name: Switch CLDR to CLDR_REF
+      run: cd cldr && git fetch && git checkout ${{ steps.cldr_ref.outputs.CLDR_REF }}
     - name: Backup Unicodetools and CLDR for jsps  # this is needed only for the Docker build
       run:
-        mkdir -p UnicodeJsps/target && tar cfpz UnicodeJsps/target/cldr-unicodetools.tgz ./cldr ./unicodetools
+        mkdir -p UnicodeJsps/target && tar -cpz --exclude=.git -f UnicodeJsps/target/cldr-unicodetools.tgz ./cldr ./unicodetools
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
@@ -38,16 +58,16 @@ jobs:
       run: >
         mkdir -pv $(pwd)/output/Generated/ &&
         mvn -s .github/workflows/mvn-settings.xml -B compile exec:java -DskipTests=true
-        -Dexec.mainClass="org.unicode.text.UCD.Main" -Dexec.args="version 15.1.0 build MakeUnicodeFiles"
+        -Dexec.mainClass="org.unicode.text.UCD.Main" -Dexec.args="version ${CURRENT_UVERSION} build MakeUnicodeFiles"
         -am -pl unicodetools -DCLDR_DIR=${GITHUB_WORKSPACE}/cldr
-        -DUNICODETOOLS_REPO_DIR=$(pwd) -DUVERSION=15.1.0
+        -DUNICODETOOLS_REPO_DIR=$(pwd) -DUVERSION=${CURRENT_UVERSION}
         -DUNICODETOOLS_GEN_DIR=$(pwd)/output/Generated
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Run unicodetools tests
       run: >
         mvn -s .github/workflows/mvn-settings.xml -B test -am -pl unicodetools
-        -DCLDR_DIR=${GITHUB_WORKSPACE}/cldr -T 1C -Dparallel=classes -DUNICODETOOLS_REPO_DIR=$(pwd) -DUVERSION=15.1.0 -DUNICODETOOLS_GEN_DIR=$(pwd)/output/Generated
+        -DCLDR_DIR=${GITHUB_WORKSPACE}/cldr -T 1C -Dparallel=classes -DUNICODETOOLS_REPO_DIR=$(pwd) -DUVERSION=${CURRENT_UVERSION} -DUNICODETOOLS_GEN_DIR=$(pwd)/output/Generated
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Package JSPs
