--- a/.github/workflows/cli-build-instructions.yml
+++ b/.github/workflows/cli-build-instructions.yml
@@ -65,7 +65,7 @@ jobs:
           mkdir -p UnicodeJsps/target && tar -cpz --exclude=.git -f UnicodeJsps/target/cldr-unicodetools.tgz ./cldr ./unicodetools
       - name: Symlink CLDR working copy to be sibling of Unicode Tools
         run: |
-          ln -s cldr ..
+          ln -s $(pwd)/cldr ..
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
