--- a/unicodetools/.project
+++ b/unicodetools/.project
@@ -35,12 +35,12 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1625517710081</id>
+			<id>1669808791356</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
 				<id>org.eclipse.core.resources.regexFilterMatcher</id>
-				<arguments>node_modules|.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
+				<arguments>node_modules|\.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
