chore(deps): Unicode 15 update of the UnicodeJsps bidi-c demo
- rearrange the docker file so that caching works better
- remove -q (quiet) from the apk command

Fixes #343

--- a/UnicodeJsps/Dockerfile
+++ b/UnicodeJsps/Dockerfile
@@ -1,9 +1,9 @@
 # Copyright (c) 2020 and later Unicode, Inc. and others. All Rights Reserved.
 FROM alpine as cbuild
-ARG CVERSION=14.0.0
-ARG CPATH=https://www.unicode.org/Public/PROGRAMS/BidiReferenceC/
 WORKDIR /build
-RUN apk add --update -q wget make gcc musl-dev
+RUN apk add --update wget make gcc musl-dev
+ARG CPATH=https://www.unicode.org/Public/PROGRAMS/BidiReferenceC/
+ARG CVERSION=15.0.0
 RUN wget -np -nv --reject-regex='.*\.(lib|exe)$' --cut-dirs=4 -nH -r ${CPATH}${CVERSION}/
 RUN cd source && gcc -I ../include/ -static -Os -o3 -o bidiref1 bidiref1.c brutils.c brtest.c brtable.c brrule.c
 RUN ls -lh /build/source/bidiref1 && (/build/source/bidiref1 || true)
