--- a/.github/workflows/push-jsp-on-tag.yml
+++ b/.github/workflows/push-jsp-on-tag.yml
@@ -25,7 +25,7 @@ jobs:
         restore-keys: |
           cldr-${{ steps.cldr_ref.outputs.CLDR_REF }}
     - name: Check out CLDR
-      uses: actions/checkout@v1.2  # yes, v1 due to https://github.com/actions/checkout/issues/265
+      uses: actions/checkout@50fbc622fc4ef5163becd7fab6573eac35f8462e  # 1.2.0 due to https://github.com/actions/checkout/issues/265 - need specific short sha
       with:
         repository: unicode-org/cldr
         path: cldr
