--- a/.github/workflows/cli-build-instructions.yml
+++ b/.github/workflows/cli-build-instructions.yml
@@ -161,6 +161,7 @@ jobs:
 
       - name: Check that UCD files are consistent
         run: |
+          cd unicodetools/mine/src
           ./py/copygenerateducd.py
           git diff --compact-summary --exit-code || {
             git diff --compact-summary |
