--- a/.github/workflows/cli-build-instructions.yml
+++ b/.github/workflows/cli-build-instructions.yml
@@ -162,6 +162,7 @@ jobs:
       - name: Check that UCD files are consistent
         run: |
           cd unicodetools/mine/src
+          stat py/copygenerateducd.py
           ./py/copygenerateducd.py --out-of-source -y
           git diff --compact-summary --exit-code || {
             git diff --compact-summary |
