--- a/.github/workflows/cli-build-instructions.yml
+++ b/.github/workflows/cli-build-instructions.yml
@@ -91,70 +91,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  # Out-of-source build.
-  tests:
-    name: Build and test, including invariants
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Unicode Tools
-        uses: actions/checkout@v3
-        with:
-          repository: unicode-org/unicodetools
-          path: unicodetools/mine/src
-      - name: Get the CLDR_REF from pom.xml
-        id: cldr_ref
-        run: echo "CLDR_REF="$(mvn --file unicodetools/mine/src/pom.xml help:evaluate -Dexpression=cldr.version -q -DforceStdout | cut -d- -f3) >> $GITHUB_OUTPUT && cat ${GITHUB_OUTPUT}
-      - name: Verify CLDR checkout ref
-        run: echo CLDR_REF="${{ steps.cldr_ref.outputs.CLDR_REF }}" && [ "${{ steps.cldr_ref.outputs.CLDR_REF }}x" != "x" ] # fail if empty
-      - name: Cache CLDR repository
-        uses: actions/cache@v3
-        with:
-          path: cldr/mine/src
-          key: cldr-${{ steps.cldr_ref.outputs.CLDR_REF }}
-          restore-keys: |
-            cldr
-      - name: Check out CLDR
-        uses: actions/checkout@v3
-        with:
-          repository: unicode-org/cldr
-          path: cldr/mine/src
-          ref: main
-          fetch-depth: 0
-      - name: Switch CLDR to CLDR_REF
-        run: cd cldr/mine/src && git fetch && git checkout ${{ steps.cldr_ref.outputs.CLDR_REF }}
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Cache local Maven repository
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      - name: Set up out-of-source output dir
-        run: |
-          mkdir -p unicodetools/mine/Generated/BIN
-
-      - name: Run command - Build and Test
-        run: |
-          cd unicodetools/mine/src
-          MAVEN_OPTS="-ea" mvn -s .github/workflows/mvn-settings.xml package -DCLDR_DIR=$(cd ../../../cldr/mine/src ; pwd)  -DUNICODETOOLS_GEN_DIR=$(cd ../Generated ; pwd)  -DUNICODETOOLS_REPO_DIR=$(pwd)  -DUVERSION=$CURRENT_UVERSION
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload UnicodeTestResults artifact
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: unicode-test-results
-          path: |
-            unicodetools/mine/Generated/UnicodeTestResults.*
 
   # Out-of-source build.
-  ucd-consistency-and-smoke-tests:
-    name: Check UCD consistency, smoke-test generators
+  ucd-and-smoke-tests:
+    name: UCD consistency, invariants, smoke-test generators
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Unicode Tools
@@ -221,6 +161,21 @@ jobs:
               }'
             exit 1
           }
+
+      - name: Run command - Build and Test
+        run: |
+          cd unicodetools/mine/src
+          MAVEN_OPTS="-ea" mvn -s .github/workflows/mvn-settings.xml package -DCLDR_DIR=$(cd ../../../cldr/mine/src ; pwd)  -DUNICODETOOLS_GEN_DIR=$(cd ../Generated ; pwd)  -DUNICODETOOLS_REPO_DIR=$(pwd)  -DUVERSION=$CURRENT_UVERSION
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload UnicodeTestResults artifact
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: unicode-test-results
+          path: |
+            unicodetools/mine/Generated/UnicodeTestResults.*
 
       # https://github.com/unicode-org/unicodetools/blob/main/docs/emoji/aac.md#aacorderjava
       - name: Run command - AAC Order
