--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,15 +11,17 @@ jobs:
     name: Check repertoire changes
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout merged unicodetools
+    - name: Checkout merged UnicodeData.txt
       uses: actions/checkout@v3
       with:
         path: merged
-    - name: Checkout base unicodetools
+        sparse-checkout: unicodetools/data/ucd/dev/UnicodeData.txt
+    - name: Checkout base UnicodeData.txt
       uses: actions/checkout@v3
       with:
         ref: ${{ github.event.pull_request.base.sha }}
         path: base
+        sparse-checkout: unicodetools/data/ucd/dev/UnicodeData.txt
     - name: Compare repertoire
       id: compare-repertoire
       run: |
@@ -29,7 +31,7 @@ jobs:
         then echo "changed=false" >> "$GITHUB_OUTPUT"
         else echo "changed=true" >> "$GITHUB_OUTPUT"
         fi
-    - name: Compare repertoire
+    - name: Test
       if: steps.compare-repertoire.changed == 'true'
       run: |
         echo test
